# memory-management

./: README.md  memory_state.json  pyproject.toml
runs/: demo_session_001.jsonl
src/agent_memory/: __init__.py  cli.py  config.py  conversation.py  long_term.py  manager.py  models.py  short_term.py  token_utils.py
tests/: test_memory_manager.py
